testsuite/tests/properties/invalid_at/kwargs/test.lkt
from common import FooNode

class BarNode: FooNode {
    @exported fun bar_prop(): Int = node.singleton()[index=12]
}
